--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
+    <head th:replace="fragments/layout :: head(title='Makea diili')" lang="en">
         <meta charset="UTF-8" />
-        <title>Ny app</title>
+        <title>Otsikko</title>
     </head>
-    <body>
+    <!--<body class="custom-element">-->
+    <body class="body">
 
-        <!--<h1></h1>-->
-        <p>Här kommer att finnas en ny app.</p>
+<!--        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Butiker nära dig</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>    
+                </ul>
+            </div>  
+        </nav>
+        <p class="text-danger">Här kommer att finnas en ny app.</p>-->
+        <p class="text-red">Här kommer att finnas en ny app.</p>
         <p></p>
 
 
