--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -1,11 +1,10 @@
 body {
    background-color: #f3bd03; 
 }
-/*custom-element {
-  color: $gray-100;
-  background-color: $dark;
-}*/
 
-/*.text-red-300 {
-    color: $red-300;
+/*.nav-custom-bg {
+    background-color: #f3bd03; 
+} */
+/*.navbar-nav > li a{
+  color: #f3bd03 !important
 }*/
