--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,17 +5,17 @@
         <title>Otsikko</title>
     </head>
     <!--<body class="custom-element">-->
-    <body class="body">
+    <body>
 
-<!--        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <a class="navbar-brand" href="#">Logo</a>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <img th:src="@{/img/logo.jpeg}" class="img-fluid" style="height:40px;" alt="logo"/>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Butiker nära dig</a>
+                        <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -26,8 +26,28 @@
                 </ul>
             </div>  
         </nav>
-        <p class="text-danger">Här kommer att finnas en ny app.</p>-->
-        <p class="text-red">Här kommer att finnas en ny app.</p>
+        <!--        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <nav class="navbar navbar-expand-xl bg-dark">
+                    <img th:src="@{/img/logo.jpeg}" class="img-fluid" style="height:40px;" alt="logo"/>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Butiker nära dig</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>    
+                        </ul>
+                    </div>  
+                </nav>-->
+
+        <p>Här kommer att finnas en ny app.</p>
         <p></p>
 
 
