--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <!--<body class="custom-element">-->
     <body>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<!--        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <img th:src="@{/img/logo.jpeg}" class="img-fluid" style="height:40px;" alt="logo"/>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                     </li>    
                 </ul>
             </div>  
-        </nav>
+        </nav>-->
         <!--        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <nav class="navbar navbar-expand-xl bg-dark">
                     <img th:src="@{/img/logo.jpeg}" class="img-fluid" style="height:40px;" alt="logo"/>
@@ -50,6 +50,11 @@
         <p>Här kommer att finnas en ny app.</p>
         <p></p>
 
-
+<!--        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>-->
     </body>
 </html>
